--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 # session.json
 
 # Database
-*.db
-*.db-journal
-*.db-wal
-*.db-shm
+# *.db
+# *.db-journal
+# *.db-wal
+# *.db-shm
 
 # Temporary files
 tmp_*
